Formatting and extra info

--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   "dependencies": {
     "clarinet": "^0.12.4",
     "react": "^16.2.0",
-    "react-dom": "^16.2.0"
+    "react-dom": "^16.2.0",
+    "react-table": "^7.7.0"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
